[gd_scene load_steps=7 format=3 uid="uid://d1fdo0sym155n"]

[ext_resource type="Script" path="res://scenes/tips.gd" id="1_5i7du"]
[ext_resource type="PackedScene" uid="uid://qq55blymvfuq" path="res://scenes/element.tscn" id="2_nn3uk"]
[ext_resource type="Script" path="res://scenes/tip_element.gd" id="3_myr7b"]
[ext_resource type="Texture2D" uid="uid://h157q1q7x0q2" path="res://assets/icons/+.png" id="4_7wuow"]
[ext_resource type="Theme" uid="uid://dgg4q0g5l2soj" path="res://resources/themes/tip_button.tres" id="5_n0aga"]
[ext_resource type="Texture2D" uid="uid://dmxe55gcq1rel" path="res://assets/tip/tip_on.png" id="6_bmune"]

[node name="Tips" type="VBoxContainer"]
anchors_preset = -1
anchor_right = 0.104
anchor_bottom = 0.185
offset_right = 0.319992
offset_bottom = 0.199997
mouse_filter = 2
script = ExtResource("1_5i7du")

[node name="TipsAmount" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="TipsElementsHBox" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="LeftElement" parent="TipsElementsHBox" instance=ExtResource("2_nn3uk")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
stretch_mode = 2
script = ExtResource("3_myr7b")

[node name="TextureRect" type="TextureRect" parent="TipsElementsHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.08
texture = ExtResource("4_7wuow")
expand_mode = 1
stretch_mode = 5

[node name="RightElement" parent="TipsElementsHBox" instance=ExtResource("2_nn3uk")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
stretch_mode = 2
script = ExtResource("3_myr7b")

[node name="TipButton" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.71
theme = ExtResource("5_n0aga")
texture_normal = ExtResource("6_bmune")
ignore_texture_size = true
stretch_mode = 5
